--- a/Via 1.css
+++ b/Via 1.css
@@ -1,8 +1,16 @@
 h1{
-    background-color:rgb(176, 224, 230);
+    background-color:#EDE3E0;
     font-family:Arial, Helvetica, sans-serif;
     font-size: 800%;
 }
 body{
     text-align: center;
+    background-image: url(Salademadeira.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+h2{
+    background-color:#EDE3E0;
+    font-family:Arial, Helvetica, sans-serif;
+    font-size: 800%;
 }
