--- a/Via 1.css
+++ b/Via 1.css
@@ -62,9 +62,25 @@ nav a:hover {
 
 footer {
     background-color: #F45410;
-    padding: 20px 0;
+    padding: 30px 0;
     text-align: center;
     position: absolute;
-    bottom: 0;
     width: 100%;
+}
+.historia {
+    background-color: #fff;
+    padding: 50px;
+    margin: 20px auto;
+    max-width: 800px;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+.historia h2 {
+    color: #333;
+    text-align: center;
+}
+
+.historia p {
+    color: #666;
+    line-height: 1.6;
 }
