--- a/produtos.css
+++ b/produtos.css
@@ -2,7 +2,7 @@ body {
     margin: 0;
     padding: 0;
     font-family: Arial, sans-serif;
-    background-color: #f4f4f4;
+    background-color: #ffffff;
     color: #333;
 }
 
@@ -92,7 +92,7 @@ nav a:hover {
 .sidebar ul li a {
     color: #fff;
     text-decoration: none;
-    font-size: 18px;
+    font-size: 14px;
 }
 
 .sidebar ul li a:hover {
